Align moe close with data description #1

--- a/streams/public/index.html
+++ b/streams/public/index.html
@@ -29,6 +29,7 @@
 		//
 		if ( codecs.type == "audio" ) {
 			endpoint = 'streamer/ipfs/'
+		} else if ( codecs.type == "images" ) {
 		} else if ( codecs.type == "video" ) { 
 			endpoint = 'movies/ipfs/'
 		}
