--- a/streams/public/index.html
+++ b/streams/public/index.html
@@ -29,7 +29,7 @@
 		}
 	}
 
-	function ipfs_loader(medial_el,media_type,hash_id) {
+	function ipfs_loader(media_el,media_type,hash_id) {
 		//
 		let endpoint = 'streamer/ipfs/'
 		//
@@ -46,9 +46,20 @@
 		let protocol = location.protocol
 		protocol = "http:"		// get keys for server
 		let src_link = `${protocol}//${g_siteURL}/${endpoint}`
-		//medial_el.src = src_link
+		//media_el.src = src_link
 		return src_link
 	}
+
+
+	/*
+		let ucwid_info = source.ucwid_info
+		
+		have in info the wrapped key, cwids, nonce...
+		send it to the endpoint
+		//
+		let response = await post() // ... returns a URL
+		let src_link = response.url // ...
+	*/
 
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
