First changes to use counter service correctly

--- a/demos/public/index.html
+++ b/demos/public/index.html
@@ -20,15 +20,12 @@
 	//
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
-	async function media_startup_test(player,media_type,protocol,cid,src) {
+	async function media_startup(tracking,protocol,src,counter_link,session) { // _x_link_counter > counter_link
 		if ( protocol === 'ipfs' ) {
-			if ( src._is_encrypted ) {
-				let cwid = await crypto_ready_ipfs_cid(src)
-				return ipfs_loader(player,media_type,cwid)
-			} else {
-				return ipfs_loader(player,media_type,cid)
-			}
+			let links = await crypto_ready_ipfs_cid(counter_link,tracking,session,src)  // src is for checking...
+			return links
 		} else if ( protocol === 'local' ) {
+			let cid = src.cid
 			protocol = "http:"		// get keys for server
 			let endpoint = 'images/view/'
 			endpoint += cid
@@ -39,51 +36,23 @@
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
-	async function crypto_ready_ipfs_cid(cid,src) {
-		let data = {
-			"cid" : cid,
-			"ucwid" : src.ucwid_info
+	// the counter link is complete, stored in the _x_link_counter field of the meta object
+
+	async function crypto_ready_ipfs_cid(counter_link,tracking,session,src) {
+		//
+		let url = `${prot}${sp}${counter_link}/key-media/${tracking}`
+		if ( (typeof session === 'string') && session.length > 0 ) {
+			url += `/${session}`
 		}
-		let url = 'streamer/key-media/' 
-		let srver = location.host
-		let prot = location.protocol
-		let sp = '//'
 		//
 		try {
-			let result = await  await postData(`${prot}${sp}${srver}/key-media`, data)
+			let result = await fetchUrl(url)
 			if ( result.status === "OK" ) {
-				let clear_cwid = result.api_key
-				if ( clear_cwid === src.ucwid_info.ucwid_packet.clear_cwid ) {
-					return clear_cwid
-				}
+				return result.links
 			}
 		} catch(e) {
 		}
 		return false
-	}
-
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-	function ipfs_loader(media_el,media_type,hash_id) {
-		//
-		let endpoint = 'streamer/ipfs/'
-		//
-		if ( media_type == "audio" ) {
-			endpoint = 'streamer/ipfs/'
-		} else if ( media_type == "images" ) {
-			endpoint = 'images/ipfs/'
-		} else if ( media_type == "video" ) { 
-			endpoint = 'video/ipfs/'
-		}
-		//
-		endpoint += hash_id
-		//
-		let protocol = location.protocol
-		protocol = "http:"		// get keys for server
-		let src_link = `${protocol}//${g_siteURL}/${endpoint}`
-		//media_el.src = src_link
-		return src_link
 	}
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
