--- a/streams/public/index.html
+++ b/streams/public/index.html
@@ -13,20 +13,16 @@
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
-
 <script>
 	//
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
-	async function media_startup_test(player,media_type,protocol,cid,src) {
+	async function media_startup(tracking,protocol,src,counter_link,session) { // _x_link_counter > counter_link
 		if ( protocol === 'ipfs' ) {
-			if ( src._is_encrypted ) {
-				let cwid = await crypto_ready_ipfs_cid(src)
-				return ipfs_loader(player,media_type,cwid)
-			} else {
-				return ipfs_loader(player,media_type,cid)
-			}
+			let links = await crypto_ready_ipfs_cid(counter_link,tracking,session,src)  // src is for checking...
+			return links
 		} else if ( protocol === 'local' ) {
+			let cid = src.cid
 			protocol = "http:"		// get keys for server
 			let endpoint = 'images/view/'
 			endpoint += cid
@@ -37,51 +33,23 @@
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 
-	async function crypto_ready_ipfs_cid(cid,src) {
-		let data = {
-			"cid" : cid,
-			"ucwid" : src.ucwid_info
+	// the counter link is complete, stored in the _x_link_counter field of the meta object
+
+	async function crypto_ready_ipfs_cid(counter_link,tracking,session,src) {
+		//
+		let url = `${prot}${sp}${counter_link}/key-media/${tracking}`
+		if ( (typeof session === 'string') && session.length > 0 ) {
+			url += `/${session}`
 		}
-		let url = 'streamer/key-media/' 
-		let srver = location.host
-		let prot = location.protocol
-		let sp = '//'
 		//
 		try {
-			let result = await  await postData(`${prot}${sp}${srver}/key-media`, data)
+			let result = await fetchUrl(url)
 			if ( result.status === "OK" ) {
-				let clear_cwid = result.api_key
-				if ( clear_cwid === src.ucwid_info.ucwid_packet.clear_cwid ) {
-					return clear_cwid
-				}
+				return result.links
 			}
 		} catch(e) {
 		}
 		return false
-	}
-
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
-
-	function ipfs_loader(media_el,media_type,hash_id) {
-		//
-		let endpoint = 'streamer/ipfs/'
-		//
-		if ( media_type == "audio" ) {
-			endpoint = 'streamer/ipfs/'
-		} else if ( media_type == "images" ) {
-			endpoint = 'images/ipfs/'
-		} else if ( media_type == "video" ) { 
-			endpoint = 'video/ipfs/'
-		}
-		//
-		endpoint += hash_id
-		//
-		let protocol = location.protocol
-		protocol = "http:"		// get keys for server
-		let src_link = `${protocol}//${g_siteURL}/${endpoint}`
-		//media_el.src = src_link
-		return src_link
 	}
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
@@ -870,6 +838,31 @@ html {
 </body>
 </html>
 <script>
+
+
+	//  fetchUrl
+	// //
+	// fetch with GET method
+	async function fetchUrl(endpoint) {
+		let myRequest = new Request(endpoint);
+		try {
+			const body = await fetch(myRequest, {
+										method: 'GET', // *GET, POST, PUT, DELETE, etc.
+										mode: 'cors', // no-cors, *cors, same-origin
+										cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+										credentials: 'omit', // include, *same-origin, omit
+										redirect: 'follow', // manual, *follow, error
+										referrerPolicy: 'no-referrer', // no-referrer, *client
+									});
+			//
+			let infoObj = await body.json();
+			return(infoObj)
+			//
+		} catch (e) {
+			console.log(e.message)
+			return(false)
+		}
+	}
 
 	async function postData(url = '', data = {}, creds = 'omit', do_stringify = true) {
 		// Default options are marked with *
