A litte more refactoring
Added a hook for getting the session from the local storage types. E.g. db, local, cookie. Return empty string for now.

--- a/streams/public/index.html
+++ b/streams/public/index.html
@@ -75,6 +75,11 @@
 	}
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
+	function retrieve_session() {			// should be stored in some kind of local storage....
+		return ""
+	}
+
+	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 </script>
 
 	<script defer src='./build/bundle.js'></script>	
