--- a/demos/public/index.html
+++ b/demos/public/index.html
@@ -79,6 +79,11 @@
 	}
 
 	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
+	function retrieve_session() {			// should be stored in some kind of local storage....
+		return ""
+	}
+
+	// ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
 </script>
 	
 <script defer src='./build/bundle.js'></script>	
