--- a/calendars/public/index.html
+++ b/calendars/public/index.html
@@ -676,7 +676,7 @@
 					</a>
 				</td>
 				<td>
-                    Contact List and Manager
+					copious.training : contact for scheduling
 				</td>
 				<td>
 					&nbsp;
